--- a/.github/workflows/trigger-test-suites.yml
+++ b/.github/workflows/trigger-test-suites.yml
@@ -9,6 +9,12 @@ on:
       use_pr_head_sha:
         type: string
         default: 'false'
+      build_source_id:
+        type: string
+        required: false
+      sanity_test_suite_url:
+        type: string
+        required: false
     secrets:
       PAT:
         description: Personal Access Token
@@ -60,7 +66,10 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/rudderlabs/rudder-client-side-test/actions/workflows/sdk-team-js-sanity-suite.yaml/dispatches" \
             -f "ref=main" \
-            -f "inputs[environment]=${{ inputs.environment }}" -f "inputs[monorepo_version]=${{ needs.extract-monorepo-version.outputs.version }}"
+            -f "inputs[environment]=${{ inputs.environment }}" \
+            -f "inputs[monorepo_version]=${{ needs.extract-monorepo-version.outputs.version }}" \
+            -f "inputs[sanity_test_suite_url]=${{ inputs.sanity_test_suite_url }}" \
+            -f "inputs[build_source_id]=${{ inputs.build_source_id }}"
 
   trigger-e2e-test-suite:
     runs-on: [self-hosted, Linux, X64]
@@ -80,4 +89,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/rudderlabs/rudder-client-side-test/actions/workflows/sdk-team-js-regression.yaml/dispatches" \
             -f "ref=main" \
-            -f "inputs[environment]=${{ inputs.environment }}" -f "inputs[monorepo_version]=${{ needs.extract-monorepo-version.outputs.version }}"
+            -f "inputs[environment]=${{ inputs.environment }}" \
+            -f "inputs[monorepo_version]=${{ needs.extract-monorepo-version.outputs.version }}" \
+            -f "inputs[sanity_test_suite_url]=${{ inputs.sanity_test_suite_url }}" \
+            -f "inputs[build_source_id]=${{ inputs.build_source_id }}"
