--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -71,3 +71,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_SCANNER_OPTS: ${{ github.ref == 'refs/heads/main' && '-Dsonar.branch.name=main' || '' }}
+
+      - name: Upload reports to GitHub build
+        if: success() || failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: sonarqube-reports
+          path: .scannerwork
