--- a/.github/actions/workflow-utils/action.yml
+++ b/.github/actions/workflow-utils/action.yml
@@ -44,10 +44,6 @@ outputs:
     description: 'Direct URL to the workflow run'
     value: ${{ steps.trigger_workflow.outputs.run_url }}
 
-env:
-  GITHUB_API_VERSION_HEADER: 'X-GitHub-Api-Version: 2022-11-28'
-  GITHUB_ACCEPT_HEADER: 'Accept: application/vnd.github+json'
-
 runs:
   using: 'composite'
   steps:
@@ -93,8 +89,8 @@ runs:
         # Trigger the workflow
         gh api \
           --method POST \
-          -H "$GITHUB_ACCEPT_HEADER" \
-          -H "$GITHUB_API_VERSION_HEADER" \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           --input "$request_body" \
           "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/dispatches"
         
@@ -109,8 +105,8 @@ runs:
         
         # Get the latest workflow run ID
         run_id=$(gh api \
-          -H "$GITHUB_ACCEPT_HEADER" \
-          -H "$GITHUB_API_VERSION_HEADER" \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           "/repos/${{ inputs.target_repo }}/actions/workflows/${{ inputs.workflow_file }}/runs?per_page=1" | \
           jq -r '.workflow_runs[0].id')
         
@@ -140,8 +136,8 @@ runs:
         while [ $elapsed_time -lt ${{ inputs.max_wait_time }} ]; do
           # Get workflow run details
           run_data=$(gh api \
-            -H "$GITHUB_ACCEPT_HEADER" \
-            -H "$GITHUB_API_VERSION_HEADER" \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/${{ inputs.target_repo }}/actions/runs/$run_id")
           
           run_status=$(echo "$run_data" | jq -r '.status')
